# vibenews

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  EXPERIMENT_PIPELINE.md  Makefile  README.md  add_sample_data.py  check_job_status.py  comprehensive_swiss_scraper.py  comprehensive_swiss_scraping_summary.json  create_proper_babe_dataset.py  debug_scraper.py  debug_submission.py  environment.yml  fix_and_reload_swiss.py  improved_swiss_scraper.py  pyproject.toml  quick_swiss_fix.py  quick_swiss_fix_summary.json  requirements-vertex.txt  requirements.txt  scrape_swiss_articles.py  setup.py  simple_swiss_scraper.py  simple_swiss_scraping_summary.json  test_babe_integration.py  test_storage.py  test_syntax_only.py
backend/: config.py  database.py  pipeline.py
backend/annotator/: gemini_annotator.py
backend/api/: main.py  routes.py
backend/bias_detection/: __init__.py  bias_scorer.py  bias_types.py  biasscanner_pipeline.py  sentence_classifier.py
backend/config/: swiss_config.py
debug/: __init__.py
docs/: BABE_INTEGRATION_SUMMARY.md  INTERNATIONAL_SCRAPING_PLAN.md  PROJECT_STRUCTURE.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
scripts/: complete_200_articles.py  enhanced_scraper.py  gcp_setup.py  monitor_and_submit.py  run_experiment.py  scrape_international_news.py  submit_vertex_job.py
tests/: README.md  __init__.py  run_all_tests.py
trainer/: __init__.py  config.py  data.py  experiment.py  model.py  task.py
vertex_configs/: bert_baseline_job.yaml  bert_cheap.yaml  distilbert_cpu_only.yaml  distilbert_ultra_cheap.yaml
(+59 files in other folders)
